Primeiro terço da Home

--- a/Front/vite-project/index.html
+++ b/Front/vite-project/index.html
@@ -5,25 +5,31 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="src\index.css"/>
     <link rel="stylesheet" href="src\reset.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
   <body>
     <header>
-    <div class="cabecalho">
-      <ul class="cabecalho__mobile">
-        <li class="cabecalho__mobile__item"><img class="cabecalho__logo" src="src\assets\images\logoIJ.png" ></li>
-        <li class="cabecalho__mobile__item"><img class="cabecalho__menu_hamburguer" src="src\assets\images\menu_hamburguer.png" ></li>
-      </ul>
+      <div class="cabecalho">
+        <ul class="cabecalho__mobile">
+         <li class="cabecalho__mobile__item"><img class="cabecalho__logo" src="src\assets\images\logoIJ.png" ></li>
+          <li class="cabecalho__mobile__item"><img class="cabecalho__menu_hamburguer" src="src/assets/images/menu_hamburguer.png" ></li>
+        </ul>
     </div>
     </header>
+    <section class="container__imagem__home">
+      <button class="botao__about">Sobre Nós</button>
+    </section>
+    <section class="container principal">
+      <h1 class="titulo__principal">Instituto Jaguatirica</h1>
+      <p class="texto__principal">O Instituto Jaguatirica é uma ONG dedicada à proteção e preservação da fauna silvestre brasileira. Nossa missão é promover a conscientização sobre a importância da biodiversidade e a necessidade de proteger os habitats naturais dos animais. Atuamos no resgate, reabilitação e reintegração de espécies ameaçadas, além de desenvolver projetos educativos que envolvem a comunidade em ações de conservação.</p>
+    </section>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-<<<<<<< HEAD
   
-=======
-
->>>>>>> 1c0e83b54f1d71d2413e17291296b8c8d86ffdf3
 
