Esboço do 'conheça nossos animais'

--- a/Front/vite-project/index.html
+++ b/Front/vite-project/index.html
@@ -27,6 +27,24 @@
       <h1 class="titulo__principal">Instituto Jaguatirica</h1>
       <p class="texto__principal">O Instituto Jaguatirica é uma ONG dedicada à proteção e preservação da fauna silvestre brasileira. Nossa missão é promover a conscientização sobre a importância da biodiversidade e a necessidade de proteger os habitats naturais dos animais. Atuamos no resgate, reabilitação e reintegração de espécies ameaçadas, além de desenvolver projetos educativos que envolvem a comunidade em ações de conservação.</p>
     </section>
+    <section class="container conheca">
+      <h1 class="titulo__conheca">Conheça nossos animais!</h1>
+      <ul class="lista__conheca">
+        <li class="lista__conheca__item">
+          <p>
+            <h5>procurar um png mapa do Brasil</h5>
+            <h3 class="lista__conheca__item__titulo">Região</h3>
+          </p>
+        </li>
+        <li class="lista__conheca__item">
+          <p>
+            <h5>procurar um png patinhas</h5>
+            <h3 class="lista__conheca__item__titulo">Espécie</h3>
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section></section>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
