--- a/Front/vite-project/index.html
+++ b/Front/vite-project/index.html
@@ -38,9 +38,31 @@
         </li>
       </ul>
     </section>
-    <section class="container__programas">
+    <section class="container programas">
       <h1 class= "titulo__programas">Programas do Instituto</h1>
-      
+      <ul class="lista__programas">
+        <li class="lista__programas__item card">
+          <img class="programas__item__imagem" src="src/assets/images/Animais/mamifero/micoleao/micoleao.jfif">
+          <h2 class="subtitulo__programas">Monitoramento de Espécies Ameaçadas</h2>
+        </li>
+        <li class="lista__programas__item card">
+          <img class="programas__item__imagem" src="src/assets/images/Animais/ave/ararinha_azul/Ararinha-azul.png">
+          <h2 class="subtitulo__programas">Combate ao Tráfico de Animais Silvestres</h2>
+        </li>
+        <li class="lista__programas__item card">
+          <img class="programas__item__imagem" src="src/assets/images/Animais/mamifero/tatucanastra/tatu_canastra.jpg">
+          <h2 class="subtitulo__programas">Resgate e Reabilitação de Animais Silvestres</h2>
+        </li>
+        <li class="lista__programas__item card">
+          <img class="programas__item__imagem" src="src/assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+          <h2 class="subtitulo__programas">Apadrinhamento de Animais e Apoio à Fauna</h2>
+        </li>
+      </ul>
+    </section>
+    <section class="container aliado">
+      <h1 class="titulo__conheca">Seja um aliado!</h1>
+
+
 
 
     </section>
