Home estática quase completa

--- a/Front/vite-project/index.html
+++ b/Front/vite-project/index.html
@@ -60,11 +60,15 @@
       </ul>
     </section>
     <section class="container aliado">
-      <h1 class="titulo__conheca">Seja um aliado!</h1>
-
-
-
-
+      <h1 class="titulo__aliado">Seja um aliado!</h1>
+      <!---CARROSSEL--->
+      <img class="voluntarios_imagem" src="src/assets/images/voluntarios/voluntarios3.jpg">
+      <button class ="botao__aliado">Doações</button>
+      <button class ="botao__aliado">Padrinhos</button>
+      <button class ="botao__aliado">Voluntariado</button>
+    </section>
+    <section class="conheca">
+      <h1 class="titulo__conheca">Contato</h1>
     </section>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
