--- a/Front/vite-project/index.html
+++ b/Front/vite-project/index.html
@@ -20,7 +20,7 @@
     </div>
     </header>
     <section class="container__imagem__home">
-      <button class="botao__about">Sobre Nós</button>
+      <button class="botao__about"><a href="./src/templates/about.html">Sobre Nós</a></button>
     </section>
     <section class="container principal">
       <p class="texto__principal">O Instituto Jaguatirica é uma ONG dedicada à proteção e preservação da fauna silvestre brasileira. Nossa missão é promover a conscientização sobre a importância da biodiversidade e a necessidade de proteger os habitats naturais dos animais. Atuamos no resgate, reabilitação e reintegração de espécies ameaçadas, além de desenvolver projetos educativos que envolvem a comunidade em ações de conservação.</p>
@@ -30,11 +30,11 @@
       <ul class="lista__conheca">
         <li class="lista__conheca__item">
             <img class="lista__conheca__item__imagem" src="src/assets/images/Vetores/brazil.png">
-            <h3 class="lista__conheca__item__titulo">Região</h3>
+            <h3 class="lista__conheca__item__titulo"><a href="./src/templates/animais_regioes.html">Região</a></h3>
         </li>
         <li class="lista__conheca__item">
             <img class="lista__conheca__item__imagem" src="src/assets/images/Vetores/patas.png">
-            <h3 class="lista__conheca__item__titulo">Espécie</h3>
+            <h3 class="lista__conheca__item__titulo"><a href="./src/templates/animais_especies.html">Espécie</a></h3>
         </li>
       </ul>
     </section>
@@ -43,19 +43,19 @@
       <ul class="lista__programas">
         <li class="lista__programas__item card">
           <img class="programas__item__imagem" src="src/assets/images/Animais/mamifero/micoleao/micoleao.jfif">
-          <h2 class="subtitulo__programas">Monitoramento de Espécies Ameaçadas</h2>
+          <h2 class="subtitulo__programas"><a href="./src/templates/programas.html">Monitoramento de Espécies Ameaçadas</a></h2>
         </li>
         <li class="lista__programas__item card">
           <img class="programas__item__imagem" src="src/assets/images/Animais/ave/ararinha_azul/Ararinha-azul.png">
-          <h2 class="subtitulo__programas">Combate ao Tráfico de Animais Silvestres</h2>
+          <h2 class="subtitulo__programas"><a href="./src/templates/programas.html">Combate ao Tráfico de Animais Silvestres</a></h2>
         </li>
         <li class="lista__programas__item card">
           <img class="programas__item__imagem" src="src/assets/images/Animais/mamifero/tatucanastra/tatu_canastra.jpg">
-          <h2 class="subtitulo__programas">Resgate e Reabilitação de Animais Silvestres</h2>
+          <h2 class="subtitulo__programas"><a href="./src/templates/programas.html">Resgate e Reabilitação de Animais Silvestres</a></h2>
         </li>
         <li class="lista__programas__item card">
           <img class="programas__item__imagem" src="src/assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-          <h2 class="subtitulo__programas">Apadrinhamento de Animais e Apoio à Fauna</h2>
+          <h2 class="subtitulo__programas"><a href="./src/templates/programas.html">Apadrinhamento de Animais e Apoio à Fauna</a></h2>
         </li>
       </ul>
     </section>
@@ -63,9 +63,9 @@
       <h1 class="titulo__aliado">Seja um aliado!</h1>
       <!---CARROSSEL--->
       <img class="voluntarios_imagem" src="src/assets/images/voluntarios/voluntarios3.jpg">
-      <button class ="botao__aliado">Doações</button>
-      <button class ="botao__aliado">Padrinhos</button>
-      <button class ="botao__aliado">Voluntariado</button>
+      <button class ="botao__aliado"><a href="./src/templates/doacao.html">Doações</a></button>
+      <button class ="botao__aliado"><a href="./src/templates/apadrinhamento.html">Padrinhos</a></button>
+      <button class ="botao__aliado"><a href="./src/templates/cadastro_voluntario.html">Voluntariado</a></button>
     </section>
     <section class="conheca">
       <h1 class="titulo__conheca">Contato</h1>
