Iniciando responsividade da Home

--- a/Front/vite-project/index.html
+++ b/Front/vite-project/index.html
@@ -34,8 +34,10 @@
       <button class="botao__about"><a href="./src/templates/about.html">Sobre Nós</a></button>
     </section>
     <section class="container principal">
-      <h1 class="titulo__principal_desktop">Instituto Jaguatirica</h1>
-      <p class="texto__principal">O Instituto Jaguatirica é uma ONG dedicada à proteção e preservação da fauna silvestre brasileira. Nossa missão é promover a conscientização sobre a importância da biodiversidade e a necessidade de proteger os habitats naturais dos animais. Atuamos no resgate, reabilitação e reintegração de espécies ameaçadas, além de desenvolver projetos educativos que envolvem a comunidade em ações de conservação.</p>
+      <div class="paragrafo_descr">
+        <h1 class="titulo__principal_desktop">Instituto Jaguatirica</h1>
+        <p class="texto__principal">O Instituto Jaguatirica é uma ONG dedicada à proteção e preservação da fauna silvestre brasileira. Nossa missão é promover a conscientização sobre a importância da biodiversidade e a necessidade de proteger os habitats naturais dos animais. Atuamos no resgate, reabilitação e reintegração de espécies ameaçadas, além de desenvolver projetos educativos que envolvem a comunidade em ações de conservação.</p>
+      </div>
     </section>
     <section class="container conheca">
       <h1 class="titulo__conheca">Conheça nossos animais!</h1>
