--- a/Front/vite-project/index.html
+++ b/Front/vite-project/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="src\index.css"/>
+    <link rel="stylesheet" href="src/index.css"/>
     <link rel="stylesheet" href="src\reset.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
       <div class="cabecalho__mobile">
          <img class="cabecalho__mobile__item cabecalho__logo" src="src\assets\images\logoIJ.png" >
          <h1 class="titulo__principal">Instituto Jaguatirica</h1>
-        <img class="cabecalho__mobile__item cabecalho__menu_hamburguer" src="src/assets/images/menu_hamburguer.png" >
+       <img class="cabecalho__mobile__item cabecalho__menu_hamburguer" src="src/assets/images/menu_hamburguer.png" >
     </div>
     </header>
     <section class="container__imagem__home">
