correção dos paths de estilização nos templates + correção da responsividade do menu

--- a/Front/vite-project/index.html
+++ b/Front/vite-project/index.html
@@ -31,7 +31,7 @@
           <a href="src/templates/animais_especies.html">Taxonomia</a>
         </div>
       </div>
-      <a href="#about">doações</a>
+      <a href="./src/templates/doacao.html">doações</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
   </div>
