--- a/Front/vite-project/index.html
+++ b/Front/vite-project/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="jpg" href="./src/assets/images/logoIJ.png" />
   <link rel="stylesheet" href="src/index.css" />
   <link rel="stylesheet" href="src\reset.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,13 +11,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <script src="index.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>IJ</title>
 </head>
 
 <body>
 
   <div class="topnav" id="myTopnav">
-    <img src="src/assets/images/logoIJ.png">
+    <a href="index.html"><img src="SRC/assets/images/logoIJ.png"></a>
     <div class="putz">
       <a href="src/templates/about.html" class="active">Sobre nós</a>
       <a href="src/templates/programas.html">programas</a>
@@ -31,7 +31,7 @@
           <a href="src/templates/animais_especies.html">Taxonomia</a>
         </div>
       </div>
-      <a href="./src/templates/doacao.html">doações</a>
+      <a href="./src/templates/about.html">doações</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
   </div>
