--- a/Front/vite-project/index.html
+++ b/Front/vite-project/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="jpg" href="./src/assets/images/logoIJ.png" />
   <link rel="stylesheet" href="src/index.css" />
-  <link rel="stylesheet" href="src\reset.css" />
+  <link rel="stylesheet" href="src/reset.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
