Organizando path e iniciando Animais por Região

--- a/Front/vite-project/index.html
+++ b/Front/vite-project/index.html
@@ -24,18 +24,18 @@
             <span class="icon"></span>
           </button>
           <ul id="menu" class="menu">
-            <li class="menu-item"><a href="#">Home</a></li>
-            <li class="menu-item"><a href="#">Sobre Nós</a></li>
-            <li class="menu-item"><a href="#">Programas</a></li>
+            <li class="menu-item"><a href="./index.html">Home</a></li>
+            <li class="menu-item"><a href="./src/templates/about.html">Sobre Nós</a></li>
+            <li class="menu-item"><a href="./src/templates/program.html">Programas</a></li>
             <li class="menu-item"><a href="#">Animais</a></li>
-            <li class="menu-item"><a href="#">Voluntariado</a></li>
+            <li class="menu-item"><a href="./src/templates/cadastro_voluntario.html">Voluntariado</a></li>
             <li class="menu-item"><a href="#">Doações</a></li>
           </ul>
         </div>
         <div class="hdr-desktop">
           <img class="hdr-desktop-item hdr-logo" src="src\assets\images\logoIJ.png" >
           <ul id="menu-dkt" class="menu-dkt" aria-hidden="true">
-            <li class="menu-item-dkt"><a href="#">Home</a></li>
+            <li class="menu-item-dkt"><a href="./index.html">Home</a></li>
             <li class="menu-item-dkt"><a href="./src/templates/about.html">Sobre Nós</a></li>
             <li class="menu-item-dkt"><a href="./src/templates/program.html">Programas</a></li>
             <li class="menu-item-dkt"><a href="#">Animais</a></li>
@@ -90,7 +90,7 @@
     </section>
     <section class="container ally">
       <h1 class="title-ally">Seja um aliado!</h1>
-      <img class="voluntarios_imagem" src="src/assets/images/voluntarios/voluntarios3.jpg">
+      <img class="ally-img" src="src/assets/images/voluntarios/voluntarios3.jpg">
       <button class ="btn-ally"><a href="./src/templates/doacao.html">Doações</a></button>
       <button class ="btn-ally"><a href="./src/templates/apadrinhamento.html">Padrinhos</a></button>
       <button class ="btn-ally"><a href="./src/templates/cadastro_voluntario.html">Voluntariado</a></button>
@@ -100,6 +100,6 @@
     </section>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="menu.js"></script>
+    <script src="src/menu.js"></script>
   </body>
 </html>
