Arrumando menu, pagina regiões

--- a/Front/vite-project/index.html
+++ b/Front/vite-project/index.html
@@ -29,7 +29,7 @@
             <li class="menu-item"><a href="./src/templates/program.html">Programas</a></li>
             <li class="menu-item"><a href="#">Animais</a></li>
             <li class="menu-item"><a href="./src/templates/cadastro_voluntario.html">Voluntariado</a></li>
-            <li class="menu-item"><a href="#">Doações</a></li>
+            <li class="menu-item"><a href="./src/templates/doacao.html">Doações</a></li>
           </ul>
         </div>
         <div class="hdr-desktop">
@@ -40,7 +40,7 @@
             <li class="menu-item-dkt"><a href="./src/templates/program.html">Programas</a></li>
             <li class="menu-item-dkt"><a href="#">Animais</a></li>
             <li class="menu-item-dkt"><a href="./src/templates/cadastro_voluntario.html">Voluntariado</a></li>
-            <li class="menu-item-dkt"><a href="#">Doações</a></li>
+            <li class="menu-item-dkt"><a href="./src/templates/doacao.html">Doações</a></li>
           </ul>
         </div>
       </nav>
