Animais regiões responsivo

--- a/Front/vite-project/src/index.html
+++ b/Front/vite-project/src/index.html
@@ -18,7 +18,7 @@
     <header>
       <nav class="hdr">
         <div class="hdr-mobile">
-          <img class="hdr-mobile-item hdr-logo" src="./src/assets/images/logoIJ.png" >
+          <img class="hdr-mobile-item hdr-logo" src="./assets/images/logoIJ.png" >
           <h1 class="title-principal">Instituto Jaguatirica</h1>
           <button id="hamburguer-button" class="hamburguer-button" aria-label="Menu Principal" aria-controls="menu">
             <span class="icon"></span>
