--- a/Front/vite-project/src/index.html
+++ b/Front/vite-project/src/index.html
@@ -107,10 +107,63 @@
       <button class ="btn-ally"><a href="./templates/apadrinhamento.html">Padrinhos</a></button>
       <button class ="btn-ally"><a href="./templates/cadastro_voluntario.html">Voluntariado</a></button>
     </section>
-    <section class="our-animals">
-      <h1 class="title-our-animals">Contato</h1>
-    </section>
-    <div id="root"></div>
-    <script src="./menu.js"></script>
+
+    <footer class="rodape">        
+      <ul class="rodape__lista-contato">
+        <li class="rodape__lista__titulo-contato">Fale conosco</li>
+        <li class="rodape__lista__item-contato">Rua das Palmeiras, 450 - Centro</li>
+        <li class="rodape__lista__item-contato">Nova Esperança, São Paulo, Brasil - CEP: 13800-123</li>
+        <li class="rodape__lista__item-contato">Telefone: (19) 3456-7890</li>
+        <li class="rodape__lista__item-contato">E-mail: <a href="mailto:contato@institutojaguatirica.org" style="text-decoration: none">contato@institutojaguatirica.org</a></li>
+        <li class="rodape__lista__item-contato">&copy; 2024 Instituto Jaguatirica - Todos os direitos reservados.</li>
+      </ul>
+      <div class="vl"></div>
+      <ul class="rodape__lista">
+          <li class="rodape__lista__titulo">Conheça</li>
+          <li class="rodape__lista__item">
+            <img class="footer_icon" src="./assets/images/Vetores/icon-about.png">
+            <a href="./templates/about.html">Sobre nós</a>
+          </li>
+          <li class="rodape__lista__item">
+            <img class="footer_icon" src="./assets/images/Vetores/binoculos.png">
+            <a href="./templates/programas.html">Nossos Programas</a>
+          </li>
+          <li class="rodape__lista__item">
+            <img class="footer_icon" src="./assets/images/Vetores/mapa.png">
+            <a href="./templates/animais_regioes.html">Regiões</a>
+          </li>
+          <li class="rodape__lista__item">
+            <img class="footer_icon" src="./assets/images/Vetores/pata-de-animal.png">
+            <a href="./templates/animais_especies.html">Espécies</a>
+          </li>
+      </ul>
+      <div class="vl"></div>
+      <ul class="rodape__lista">
+          <li class="rodape__lista__titulo">Ajude nossa causa</li>
+          <li class="rodape__lista__item">
+            <img class="footer_icon" src="./assets/images/Vetores/doacao.png">
+            <a href="./templates/doacao.html">Doações</a>
+          </li>
+          <li class="rodape__lista__item">
+            <img class="footer_icon" src="./assets/images/Vetores/dois-coracoes.png">
+            <a href="./templates/apadrinhamento.html">Apadrinhamento</a>
+          </li>
+      </ul>
+      <div class="vl"></div>   
+      <ul class="rodape__lista">
+          <li class="rodape__lista__titulo">Faça parte do instituto</li>
+          <li class="rodape__lista__item">
+            <img class="footer_icon" src="./assets/images/Vetores/observacao.png">
+            <a href="./templates/registro.html">Registro</a>
+          </li>
+          <li class="rodape__lista__item">
+            <img class="footer_icon" src="./assets/images/Vetores/voluntariado.png">
+            <a href="./templates/cadastro_voluntario.html">Voluntariado</a>
+          </li>
+      </ul>
+    </footer>
+
+      <div id="root"></div>
+      <script src="./menu.js"></script>
   </body>
 </html>
