header, precisa de ajuste

--- a/Front/vite-project/src/index.html
+++ b/Front/vite-project/src/index.html
@@ -34,8 +34,21 @@
                 <li class="menu-item dropdown-item"><a href="./templates/animais_regioes.html">Regiões</a></li>
               </ul>
             </li>
-            <li class="menu-item"><a href="./templates/cadastro_voluntario.html">Voluntariado</a></li>
-            <li class="menu-item"><a href="./doacao.html">Doações</a></li>
+            <li class="menu-item btn btn-secondary" id="dropdownColab"  aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+              <a href="#">Colabore</a>
+              <ul class="dropdown-menu">
+                <li class="menu-item dropdown-item"><a href="./templates/animais_regioes.html">Doações</a></li>
+                <li class="menu-item dropdown-item"><a href="./templates/animais_regioes.html">Apadrinhamento</a></li>
+                <li class="menu-item dropdown-item"><a href="./templates/animais_especies.html">Voluntariado</a></li>
+              </ul>
+            </li>
+            <li class="menu-item btn btn-secondary" id="dropdownConta"  aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+              <a href="#">Minha conta</a>
+              <ul class="dropdown-menu">
+                <li class="menu-item dropdown-item"><a href="./templates/animais_regioes.html">Registro</a></li>
+                <li class="menu-item dropdown-item"><a href="./templates/animais_regioes.html">Login</a></li>
+              </ul>
+            </li>
           </ul>
         </div>
         <div class="hdr-desktop">
@@ -51,8 +64,21 @@
                 <li class="menu-item dropdown-item"><a href="./templates/animais_regioes.html">Regiões</a></li>
               </ul>
             </li>
-            <li class="menu-item-dkt"><a href="./templates/cadastro_voluntario.html">Voluntariado</a></li>
-            <li class="menu-item-dkt"><a href="./templates/doacao.html">Doações</a></li>
+            <li class="menu-item btn btn-secondary" id="dropdownColabDkt"  aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+              <a href="#">Colabore</a>
+              <ul class="dropdown-menu-dkt">
+                <li class="menu-item dropdown-item"><a href="./templates/animais_regioes.html">Doações</a></li>
+                <li class="menu-item dropdown-item"><a href="./templates/animais_regioes.html">Apadrinhamento</a></li>
+                <li class="menu-item dropdown-item"><a href="./templates/animais_especies.html">Voluntariado</a></li>
+              </ul>
+            </li>
+            <li class="menu-item btn btn-secondary" id="dropdownContaDkt"  aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+              <a href="#">Minha conta</a>
+              <ul class="dropdown-menu-dkt">
+                <li class="menu-item dropdown-item"><a href="./templates/animais_regioes.html">Registro</a></li>
+                <li class="menu-item dropdown-item"><a href="./templates/animais_regioes.html">Login</a></li>
+              </ul>
+            </li>
           </ul>
         </div>
       </nav>
@@ -157,7 +183,7 @@
             <a href="./templates/registro.html">Registro</a>
           </li>
           <li class="rodape__lista__item">
-            <img class="footer_icon" src="./assets/images/Vetores/voluntariado.png">
+            <img class="footer_icon" src="./assets/images/Vetores/">
             <a href="./templates/cadastro_voluntario.html">Voluntariado</a>
           </li>
       </ul>
